# Quotes-API-Client

./: CMakeLists.txt  README.md
include/: BackEnd.hpp  NetworkManager.hpp  Quote.hpp  QuoteListModel.hpp  QuotesAPI.hpp  RequestWorker.hpp
qml/: CharactersNameModel.qml  SeasonListModel.qml  main.qml  main.qrc
src/: BackEnd.cpp  NetworkManager.cpp  Quote.cpp  QuoteListModel.cpp  QuotesAPI.cpp  RequestWorker.cpp  main.cpp
